Fix: Força a atualização do Estojo 5 renomeando o arquivo

--- a/src/main/resources/templates/produtos.html
+++ b/src/main/resources/templates/produtos.html
@@ -353,7 +353,7 @@
                             <div class="relative">
                                 <div class="flex overflow-x-auto gap-4 carousel-container pb-4" id="estojos-carousel" style="scroll-snap-type: x mandatory; scrollbar-width: none; -ms-overflow-style: none;">
                                     <div class="min-w-[200px] md:min-w-[250px] bg-white rounded-lg overflow-hidden shadow-md flex-shrink-0" style="scroll-snap-align: start;">
-                                        <img src="/images/Produtos/Estojo/Estojo 5.jpg" alt="Estojo colorido" class="w-full h-48 md:h-64 object-cover">
+                                        <img src="images\Produtos\Estojo\estojo 5.jpg" alt="Estojo colorido" class="w-full h-48 md:h-64 object-cover">
                                     </div>
                                     <div class="min-w-[200px] md:min-w-[250px] bg-white rounded-lg overflow-hidden shadow-md flex-shrink-0" style="scroll-snap-align: start;">
                                         <img src="images\Produtos\Estojo\Estojo 2.jpg" alt="Estojo com código" class="w-full h-48 md:h-64 object-cover">
