Fix: Força a atualização do Estojo 5 renomeando o arquivo

--- a/src/main/resources/templates/produtos.html
+++ b/src/main/resources/templates/produtos.html
@@ -530,7 +530,7 @@
         </section>
 
         <!-- Footer -->
-        <div th:replace="~{fragments/footer :: footer}"></div>
+       <div th:replace="~{fragments/footer :: footer(theme='light')}"></div>
 
         <script src="produtos.js"></script>
     </body>
