--- a/src/main/resources/templates/sobre.html
+++ b/src/main/resources/templates/sobre.html
@@ -110,7 +110,7 @@
         </section>
 
         <!-- Footer -->
-        <div th:replace="~{fragments/footer :: footer}"></div>
+        <div th:replace="~{fragments/footer :: footer(theme='light')}"></div>
         <!-- JavaScript -->
         <!-- JavaScript -->
 
