--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -233,7 +233,7 @@
         </section>
 
         <!-- Footer -->
-        <div th:replace="~{fragments/footer :: footer}"></div>
+        <div th:replace="~{fragments/footer :: footer(theme='light')}"></div>
 
         <script src="/js/main.js"></script>
     </body>
