Atualizações Ivan: Modificações no DataLoader, Mudança de Imagen do Index - Página Produtos Atualizada - LP Necessaire modificada - LP Caneca Modificada

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -152,7 +152,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* FAQ styling */
 .faq-toggle i {
-  transition: transform 2s ease;
+  transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .faq-content {
