--- a/src/main/resources/templates/sobre.html
+++ b/src/main/resources/templates/sobre.html
@@ -51,7 +51,7 @@
                     <div class="mb-16 animate-on-scroll">
                         <div class="relative pb-[56.25%] h-0 overflow-hidden rounded-lg shadow-xl">
                             <iframe class="absolute top-0 left-0 w-full h-full" 
-                                    src="https://www.youtube.com/embed/_6zsboCaQQ8" 
+                                    src="https://www.youtube.com/embed/RntmlVkqg6c" 
                                     th:title="#{about.story.video.title}" 
                                     frameborder="0" 
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
