Arruamdo os textos do Banner e da Galeria de Produtos das Landing Pages

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -45,8 +45,8 @@
                     <li class="flex items-center gap-2">
                         <i class="far fa-envelope"
                            th:classappend="${isDark} ? 'text-beige-200' : 'text-burgundy-700'"></i>
-                        <a href="mailto:contato@tatiart.com"
-                           th:classappend="${isDark} ? 'text-beige-200 hover:text-white' : 'text-gray-600 hover:text-burgundy-700'">contato@tatiart.com</a>
+                        <a href="mailto:contato.tatiart@gmail.com"
+                           th:classappend="${isDark} ? 'text-beige-200 hover:text-white' : 'text-gray-600 hover:text-burgundy-700'">contato.tatiart@gmail.com</a>
                     </li>
                     <li class="flex items-center gap-2">
                         <i class="fas fa-phone"
