--- a/src/main/resources/templates/produtos.html
+++ b/src/main/resources/templates/produtos.html
@@ -324,7 +324,7 @@
                                         <img src="/images/Pagina Produtos/Bolsas/800x800 Bolsa Vermelha.jpg" alt="Bolsa Vermelha" class="w-full h-48 md:h-64 object-cover">
                                     </div>
                                     <div class="min-w-[200px] md:min-w-[250px] bg-white rounded-lg overflow-hidden shadow-md flex-shrink-0" style="scroll-snap-align: start;">
-                                        <img src="/images/Pagina Produtos/Bolsas/800x800 Bolsa Mao Preto e Branca.jpg" alt="Bolsa Mão Preto e Branca" class="w-full h-48 md:h-64 object-cover">
+                                        <img src="/images/Pagina Produtos/Bolsas/800x800 Bolsas 3 Bolsas Pequenas.png" alt="Bolsa Mão Preto e Branca" class="w-full h-48 md:h-64 object-cover">
                                     </div>
                                 </div>
                                 <button class="hidden md:block absolute left-2 top-1/2 -translate-y-1/2 bg-white rounded-full p-2 shadow-md text-burgundy-800 hover:text-burgundy-600 carousel-prev z-10">
