Arrumando o nome das fotos com acento e ç

--- a/src/main/resources/templates/produtos.html
+++ b/src/main/resources/templates/produtos.html
@@ -19,7 +19,7 @@
             
             <!-- Imagem de fundo -->
             <div class="absolute inset-0">
-                <img src="/images/Pagina Produtos/Tati Preparação Bolsa.png" alt="Banner Produtos Tatiart" class="w-full h-full object-cover">
+                <img src="/images/Pagina Produtos/Tati Preparacao Bolsa.png" alt="Banner Produtos Tatiart" class="w-full h-full object-cover">
             </div>
             
             <!-- Conteúdo -->
@@ -201,10 +201,10 @@
                                         <img src="/images/Pagina Produtos/Canecas/800x800 Canecas Torre Hobbit.png" alt="Caneca Torre Hobbit" class="w-full h-48 md:h-64 object-cover">
                                     </div>
                                     <div class="min-w-[200px] md:min-w-[250px] bg-white rounded-lg overflow-hidden shadow-md flex-shrink-0" style="scroll-snap-align: start;">
-                                        <img src="/images/Pagina Produtos/Canecas/800x800 Caneca Bicho Preguiça.png" alt="Caneca Bicho Preguiça" class="w-full h-48 md:h-64 object-cover">
+                                        <img src="/images/Pagina Produtos/Canecas/800x800 Caneca Bicho Preguica.png" alt="Caneca Bicho Preguiça" class="w-full h-48 md:h-64 object-cover">
                                     </div>
                                     <div class="min-w-[200px] md:min-w-[250px] bg-white rounded-lg overflow-hidden shadow-md flex-shrink-0" style="scroll-snap-align: start;">
-                                        <img src="/images/Pagina Produtos/Canecas/800x800 Caneca Mae é Flor.png" alt="Caneca Mãe é Flor" class="w-full h-48 md:h-64 object-cover">
+                                        <img src="/images/Pagina Produtos/Canecas/800x800 Caneca Mae eh Flor.png" alt="Caneca Mãe é Flor" class="w-full h-48 md:h-64 object-cover">
                                     </div>
                                     <div class="min-w-[200px] md:min-w-[250px] bg-white rounded-lg overflow-hidden shadow-md flex-shrink-0" style="scroll-snap-align: start;">
                                         <img src="/images/Pagina Produtos/Canecas/800x800 Caneca Mae de 3.jpg" alt="Caneca Mãe de 3" class="w-full h-48 md:h-64 object-cover">
@@ -276,13 +276,13 @@
                             <div class="relative">
                                 <div class="flex overflow-x-auto gap-4 carousel-container pb-4" id="mochilas-carousel" style="scroll-snap-type: x mandatory; scrollbar-width: none; -ms-overflow-style: none;">
                                     <div class="min-w-[200px] md:min-w-[250px] bg-white rounded-lg overflow-hidden shadow-md flex-shrink-0" style="scroll-snap-align: start;">
-                                        <img src="/images/Pagina Produtos/Mochilas/800x800 Mochila Preguiça (MT).png" alt="Mochila Preguiça" class="w-full h-48 md:h-64 object-cover">
+                                        <img src="/images/Pagina Produtos/Mochilas/800x800 Mochila Preguica (MT).png" alt="Mochila Preguiça" class="w-full h-48 md:h-64 object-cover">
                                     </div>
                                     <div class="min-w-[200px] md:min-w-[250px] bg-white rounded-lg overflow-hidden shadow-md flex-shrink-0" style="scroll-snap-align: start;">
                                         <img src="/images/Pagina Produtos/Mochilas/800x800 Lancheira Frutas.png" alt="Lancheira Frutas" class="w-full h-48 md:h-64 object-cover">
                                     </div>
                                     <div class="min-w-[200px] md:min-w-[250px] bg-white rounded-lg overflow-hidden shadow-md flex-shrink-0" style="scroll-snap-align: start;">
-                                        <img src="/images/Pagina Produtos/Mochilas/800x800 Mochila Unicórnio (MT).png" alt="Mochila Unicórnio" class="w-full h-48 md:h-64 object-cover">
+                                        <img src="/images/Pagina Produtos/Mochilas/800x800 Mochila Unicornio (MT).png" alt="Mochila Unicórnio" class="w-full h-48 md:h-64 object-cover">
                                     </div>
                                     <div class="min-w-[200px] md:min-w-[250px] bg-white rounded-lg overflow-hidden shadow-md flex-shrink-0" style="scroll-snap-align: start;">
                                         <img src="/images/Pagina Produtos/Mochilas/800x800 Kit Mochilas Dinossauro (MT).png" alt="Kit Mochilas Dinossauro" class="w-full h-48 md:h-64 object-cover">
@@ -357,7 +357,7 @@
                                         <img src="/images/Pagina Produtos/Estojos/800x800 Estojo Bento.png" alt="Estojo Bento" class="w-full h-48 md:h-64 object-cover">
                                     </div>
                                     <div class="min-w-[200px] md:min-w-[250px] bg-white rounded-lg overflow-hidden shadow-md flex-shrink-0" style="scroll-snap-align: start;">
-                                        <img src="/images/Pagina Produtos/Estojos/800x800 Estojo Óculos.png" alt="Estojo Óculos" class="w-full h-48 md:h-64 object-cover">
+                                        <img src="/images/Pagina Produtos/Estojos/800x800 Estojo Oculos.png" alt="Estojo Óculos" class="w-full h-48 md:h-64 object-cover">
                                     </div>
                                     <div class="min-w-[200px] md:min-w-[250px] bg-white rounded-lg overflow-hidden shadow-md flex-shrink-0" style="scroll-snap-align: start;">
                                         <img src="/images/Pagina Produtos/Estojos/800x800 Estojo Ady.jpg" alt="Estojo Ady" class="w-full h-48 md:h-64 object-cover">
